--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,12 +1,11 @@
 .form {
-	margin-top: 3rem;
 
 	&__container {
 		display: flex;
 		flex-direction: column;
 		width: 35rem;
 		height: 60rem;
-		margin: 0 auto;
+		margin: 8rem auto;
 		background-color: $white-color;
 		border: 1px solid $secondary-color;
 
